[tool.poetry]
name = "oanda-chart"
version = "0.0.4"
description = "Oanda forex candle chart tkinter widget."
authors = ["Andrew Allaire <andrew.allaire@gmail.com>"]
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/aallaire/oanda-chart"

[tool.poetry.dependencies]
python = "^3.5"
oanda-candles = "^0.1.0"
forex-types = "^0.0.6"
tk-oddbox = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
